[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/Background.png" type="Texture" id=1]
[ext_resource path="res://src/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/BattleNet.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/Map.gd" type="Script" id=4]
[ext_resource path="res://src/RandomizedAudio.tscn" type="PackedScene" id=5]
[ext_resource path="res://audio/Jump.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 160, 24 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_bottom = 2.0
bg_color = Color( 0.823529, 0.490196, 0.172549, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=4]
content_margin_bottom = 2.0
bg_color = Color( 0.815686, 0.27451, 0.282353, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Map" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 160, 216 )
shape = SubResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 55, 149 )

[node name="Button" type="Button" parent="."]
margin_left = 84.0
margin_top = 14.0
margin_right = 241.0
margin_bottom = 34.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
toggle_mode = true
enabled_focus_mode = 0
text = "Non Pitch Randomized"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="RandomizedAudio" parent="." instance=ExtResource( 5 )]

[connection signal="jumped" from="Player" to="." method="_on_Player_jumped"]
[connection signal="toggled" from="Button" to="." method="_on_Button_toggled"]
